# NSI-1-Urbskali

./: main.py  pyproject.toml
Autres/: autre.py  maths.py
Autres/sort/c++/: bubble-sort.cpp  merge-sort.cpp  quick-sort.cpp
Autres/sort/py/: bubble-sort.py  quick-sort.py
Cours/1_2/: Cours1Serie2.py  correction_dst.py
Cours/1_3/: Cours1Serie3.py
Cours/cours_1_4/: Cours1Serie4.py  fruits.txt  malaria.csv  tabacco.csv  tabacco2.csv  villes.csv
Cours/cours_1_5/: Cours1Serie5.py
Cours/cours_1_7/: Cours1Seriee7.py
Projet/: GUI.py  morpion.py  setup.py
TP/: TP_Ceasar.py  TP_Cryptographie.py  TP_Prenom.py  TP_Turtle.py  TP_kNN.py  iris_data.csv  iris_test1.csv  iris_test2.csv
web/: index.html
web/IMC/: index.html  script.js
web/IMC/assets/img/: Thumbs.db
web/IMC/assets/js/: script.js
web/assets/css/: global.css  style.css
web/choix_spe/: index.html  index.php  script.js
web/cv/Urbain's Profile/: index.html  style.css
web/cv/Urbain's Profile/404/: Page 3.html
web/cv/Urbain's Profile/404/Page 3_files/: 404.html  nicepage.css
web/cv/Urbain's Profile/before/: before.css  before.html  before.js
web/cv/Urbain's Profile/main/: main.html  script.js  script.min.js  style.css
web/page/: tmp.html
